--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             line-height: 1.6;
         }
         h1, h2 {
-            color: #FFAD80;
+            color: #FFCD69;
         }
         h1 {
             font-size: 2em;
