--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
     <title>Politique de confidentialité</title>
     <style>
         body {
-            background-color: #23363E;
-            color: #FAE6BB;
+            background-color: #FAE6BB;
+            color: #23363E;
             font-family: Arial, sans-serif;
             margin: 20px;
             line-height: 1.6;
         }
         h1, h2 {
-            color: #FFCD69;
+            color: #E7A74F;
         }
         h1 {
             font-size: 2em;
@@ -28,7 +28,7 @@
             padding: 0;
         }
         a {
-            color: #FFAD80;
+            color: #23363E;
             text-decoration: none;
         }
         a:hover {
