--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
     <title>Politique de confidentialité</title>
     <style>
         body {
-            background-color: #FAE6BB;
+            background-color: #fcf5f8;
             color: #23363E;
             font-family: Arial, sans-serif;
             margin: 20px;
             line-height: 1.6;
         }
         h1, h2 {
-            color: #E7A74F;
+            color: #825C6E;
         }
         h1 {
             font-size: 2em;
