--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;600&display=swap" rel="stylesheet">
 
     <style>
+        /* Global */
         body {
             background-color: #fcf5f8;
             color: #23363E;
@@ -20,6 +21,7 @@
 
         .container {
             max-width: 800px;
+            width: 90%;
             margin: 40px auto;
             padding: 20px;
             background: rgba(255, 255, 255, 0.7);
@@ -33,7 +35,7 @@
 
         h1 {
             text-align: center;
-            font-size: 2.5em;
+            font-size: 2.2em;
         }
 
         h2 {
@@ -63,7 +65,10 @@
 
         /* Barre de navigation */
         .nav {
-            text-align: center;
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+            gap: 15px;
             margin-bottom: 20px;
             padding: 10px;
             background: #825C6E;
@@ -72,8 +77,14 @@
 
         .nav a {
             color: #fcf5f8;
-            margin: 0 15px;
             font-weight: bold;
+            padding: 8px 12px;
+            border-radius: 5px;
+            transition: background 0.3s;
+        }
+
+        .nav a:hover {
+            background: rgba(255, 255, 255, 0.2);
         }
 
         /* Footer */
@@ -84,6 +95,28 @@
             color: #fcf5f8;
             margin-top: 30px;
             border-radius: 10px;
+        }
+
+        /* RESPONSIVITÉ */
+        @media (max-width: 768px) {
+            .container {
+                width: 95%;
+                padding: 15px;
+            }
+
+            h1 {
+                font-size: 1.8em;
+            }
+
+            h2 {
+                font-size: 1.3em;
+            }
+
+            .nav {
+                flex-direction: column;
+                align-items: center;
+                gap: 10px;
+            }
         }
     </style>
 </head>
@@ -96,10 +129,10 @@
 
         <!-- Barre de navigation -->
         <div class="nav">
-            <a href="#donnees">Données collectées</a> |
-            <a href="#utilisation">Utilisation</a> |
-            <a href="#partage">Partage</a> |
-            <a href="#droits">Droits</a> |
+            <a href="#donnees">Données collectées</a>
+            <a href="#utilisation">Utilisation</a>
+            <a href="#partage">Partage</a>
+            <a href="#droits">Droits</a>
             <a href="#contact">Contact</a>
         </div>
 
