--- a/index.html
+++ b/index.html
@@ -249,6 +249,26 @@
     <div id="back-to-top" onclick="scrollToTop()">⬆</div>
 
     <script>
+        document.addEventListener("DOMContentLoaded", function () {
+            const links = document.querySelectorAll(".nav a");
+
+            links.forEach(link => {
+                link.addEventListener("click", function (e) {
+                    e.preventDefault();
+                    const targetId = this.getAttribute("href").substring(1);
+                    const targetElement = document.getElementById(targetId);
+
+                    if (targetElement) {
+                        window.scrollTo({
+                            top: targetElement.offsetTop - 20, 
+                            behavior: "smooth"
+                        });
+                    }
+                });
+            });
+        });
+
+        // Script pour le bouton retour en haut
         window.onscroll = function() {
             let btn = document.getElementById('back-to-top');
             if (window.scrollY > 300) {
