--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
 
  <div class="container">
 
-        <h1>Politique de confidentialité</h1>
+        <h1>Politique de confidentialité de l'application mobile Nérimo</h1>
         <p style="text-align: center;"><strong>Dernière mise à jour :</strong> 27/01/2025</p>
 
         <!-- Barre de navigation -->
