--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         }
 
         /* Titres */
-        h1, h2 {
+        h1, h2, h3 {
             color: #825C6E;
         }
 
@@ -54,6 +54,11 @@
             margin-top: 30px;
             border-bottom: 2px solid #825C6E;
             padding-bottom: 5px;
+            font-size: 1.5em;
+        }
+        
+        h3 {
+            text-align: center;
             font-size: 1.5em;
         }
 
@@ -179,7 +184,7 @@
  <div class="container">
 
         <h1>Politique de confidentialité</h1>
-        <h2>de l'application mobile Nérimo</h2>
+        <h3>de l'application mobile Nérimo</h3>
         <p style="text-align: center;"><strong>Dernière mise à jour :</strong> 27/01/2025</p>
 
         <!-- Barre de navigation -->
